--- a/eszkozok.html
+++ b/eszkozok.html
@@ -49,7 +49,7 @@
 				Hossza nem lehet több, mint 30,5 cm, a súlya nem lehet több, mint 50 g.
 					Minden dart-nak legyen tű alakú hegye (1), ami a testhez (2) rögződik. A test hátsó végénél legyen a tollszár (3), amihez a tollat rögzítik.
 					A darts készlet három darabból áll.
-				<img src='img/dart.jpg'>
+				<img id='nyil' src='img/dart.jpg'>
 				<h2>Soft szakág esetén</h2>
 				A játékos hozza a saját dartját, amelynek hossza nem lehet több 20 cm-nél, a súlya nem lehet több 18 g-nál. Az eltérés mindkét esetben plusz 10% lehet.
 					Minden dartnak legyen műanyag, tű alakú hegye, ami a testhez rögződik.
